# python-optimization

./: LICENSE  README.md  pyproject.toml
src/python_optimization/: plot_computational_time.py  trial_optim_cpu.ipynb  trial_optim_gpu.ipynb
